# Robot_Planning-Coordinated_Evacuation

./: README.md  dubins.cpp  dubins.h  env.csv  interpolation.cpp  interpolation.h  min_roadmap_usage_example.cpp  plot.py  references.txt
BuildingTools/: contour.h  edge.h  gate.h  map.h  obstacles.h  point.h  square.h  triangle.h
CoordinationTask/: CMakeLists.txt  package.xml
CoordinationTask/include/: activateRobots.h  coordination.h  intersection.h
CoordinationTask/src/: activateRobots.cpp  coordination.cpp  intersection.cpp  prova  prove.cpp
Interpolation/: CMakeLists.txt  circleIntepolation.cpp  dubins.cpp  package.xml
Interpolation/include/: dubins.h  interpolation.h
Interpolation/src/: dubins.cpp  example1.environment  interpolation.cpp  points.csv  prova  prova.cpp
Map/: min_roadmap_usage_example.cpp
OffsetTools/: CMakeLists.txt  offsetFunctions.cpp  offsetFunctions.h  package.xml  sample_map  triangle_offsetting  try_triangle
OffsetTools/CPP/Clipper2Lib/src/: clipper.rectclip.cpp
OffsetTools/CPP/Utils/: ClipFileLoad.h  clipper.svg.h
OffsetTools/include/: offsetFunctions.h
OffsetTools/include/CPP/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp
OffsetTools/include/CPP/Utils/: ClipFileSave.h  clipper.svg.utils.h
OffsetTools/src/: offsetFunctions.cpp
VisiLibity1/src/: test_shortest_path
VisiLibity1/src/shortest_path_tests/: test.environment
path_planning/: CMakeLists.txt  package.xml
path_planning/include/: path_planning.h
path_planning/src/: path_planning.cpp
